# greenroom

./: .dockerignore  .gitignore  .pre-commit-config.yaml  ANALYTICS.md  CHANGELOG.md  CLAUDE.md  DATA_INGESTION.md  Dockerfile  Makefile  README.md  REMOVED.md  SCHEMAS.md  STORAGE.md  VISION.md  dev.sh  docker-compose.yml  fly.toml  greenroom.db-journal
backend/: alembic.ini  benchmarks.jsonl  package-lock.json  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0da88e30addd_add_users_and_magic_tokens.py  74a39211f4f7_baseline.py  a1b2c3d4e5f6_index_audio_files.py  b2c3d4e5f6a7_project_description_color.py  c3d4e5f6a7b8_project_position.py  d4e5f6a7b8c9_rename_sessions_add_name.py  f1a2b3c4d5e6_add_projects_and_project_id.py
backend/app/: config.py  database.py  main.py  scoping.py
backend/app/auth/: __init__.py  deps.py  email.py  jwt.py  router.py
backend/app/models/: __init__.py  activity.py  audio_file.py  content.py  song.py  (+12 more)
backend/scripts/: backfill_audio_files_from_takes.py  backfill_metadata.py  backfill_projects.py  benchmark.py  cleanup_library.py  cleanup_orphan_audio_files.py  create_admin.py  diagnose_library.py  heal_project_splits.py  ingest_apple_dump.py  ingest_early_days.py  link_listening_to_songs.py  reconcile_recordings.py  repair_session_upload.py  stamp_baseline.py  sync_to_vault.py
backend/tests/: conftest.py  test_auth.py  test_cloud_mode_safety.py  test_email.py  test_feedback.py  test_gopro_cloud.py  test_integration.py  test_media_redirect.py  test_project_isolation.py  test_scoping.py  test_smoke.py  test_vault.py
(+134 files in other folders)
